admission/ValidatingAdmissionPolicy/policies/windows-hostprocess/ephemeralcontainers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: windows-hostprocess-ephemeralcontainers
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
  os:
    name: windows
---
# Command: kubectl debug -n policy-test windows-hostprocess-ephemeralcontainers -it --image=busybox:1.36 --custom=policies/windows-hostprocess/ephemeralcontainers/deny-kubectl-debug-custom.yaml
